fix(packages/app): minor spacing tweaks to repl
Fixes #789

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -167,7 +167,7 @@ body.still-loading .repl {
     background: transparent;
 }
 .repl-block {
-    padding: 0.5em 0 0;
+    padding: 0.75em 0 0;
     display: flex;
     flex-direction: column;
 }
@@ -379,7 +379,7 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
 .repl input:focus {
     outline: none;
 }
-.repl-block.valid-response .ok-for-list, .repl-result .oops {
+.repl-block.valid-response .ok-for-list {
     margin-top: 0.75em;
 }
 .repl-block.valid-response .ok, .green-text, .dragover .ok-text-on-dragover {
